<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_QRscaner"
        android:name="spice.gears.android.technologies.qrcodegame.ui.scanner.ScannerFragment"
        android:label="@string/menu_QRscaner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="spice.gears.android.technologies.qrcodegame.ui.tools.ToolsFragment"
        android:label="@string/menu_my_qr"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_home"
        android:name="spice.gears.android.technologies.qrcodegame.ui.home.HomeFragment"
        android:label="@string/menu_ranking"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="spice.gears.android.technologies.qrcodegame.ui.gallery.GalleryFragment"
        android:label="@string/menu_quests"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="spice.gears.android.technologies.qrcodegame.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_social_media"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_share"
        android:name="spice.gears.android.technologies.qrcodegame.ui.share.ShareFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="spice.gears.android.technologies.qrcodegame.ui.send.SendFragment"
        android:label="@string/menu_help_info"
        tools:layout="@layout/fragment_send" />
</navigation>